--- a/css/global.css
+++ b/css/global.css
@@ -107,9 +107,23 @@ input.stv[type=color] {
 .stv-btn {
     cursor: pointer;
 }
+.stv-btn.stv-blue {
+    background-color: #188ead !important;
+    color: #fff !important;
+}
+.stv-btn.stv-red {
+    background-color: #bd1a1a !important;
+    color: #fff !important;
+}
 
 .stv-btn:hover {
     background-color: #f5f5f5;
+}
+.stv-btn.stv-blue:hover {
+    background-color: #20aed4 !important;
+}
+.stv-btn.stv-red:hover {
+    background-color: #db1e1e !important;
 }
 
 .stv-btn.stv-btn-shdw {
@@ -130,6 +144,12 @@ input.stv[type=color] {
 
 .stv-btn:active {
     background-color: #ebebeb;
+}
+.stv-btn.stv-blue:active {
+    background-color: #1e7d96 !important;
+}
+.stv-btn.stv-red:active {
+    background-color: #ac2222 !important;
 }
 
 .stv-btn:disabled {
