--- a/css/global.css
+++ b/css/global.css
@@ -341,10 +341,8 @@ textarea.stv {
 .stv-msg-hidden {
     position: fixed;
     z-index: 50000;
-    top: -200px;
     background: white;
-    border: 1px solid #000;
-    transition: top 0.9s;
+    border: 1px solid #333;
     margin: 5px;
     min-width: 150px;
     max-width: 200px;
@@ -352,20 +350,27 @@ textarea.stv {
     left: 0;
     margin-right: auto;
     margin-left: auto;
+    box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.2);
+    /*top: -200px;*/
+    top: 0px;
+    opacity: 0;
+    transition: opacity 0.4s;
 }
 
-.stv-msg-hidden >:first-child {
+.stv-msg-hidden>:first-child {
     padding: 5px;
     color: white;
-    background-color: #000;
+    background-color: #333;
 }
 
-.stv-msg-hidden >:last-child {
+.stv-msg-hidden>:last-child {
     padding: 7px;
-    color: #000;
+    color: #333;
     background-color: white;
 }
 
 .stv-msg-shown {
-    top: 0px;
+    /*top: 0px;*/
+    opacity: 1;
+    transition: opacity 1s;
 }
